uebungsaufgabe 2 und startseite hinzugefuegt

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Erster Test</title>
+    <title>Webtech: Alle Aufgaben</title>
 </head>
 <body>
-<h1>Willkommen</h1>
-<p>Hallo Welt!</p>
+<h1>Alle Aufgaben für Webtechnologien 2020/2021</h1>
+<ul>
+    <li><a href="./Uebung1/uebung1.html">Übung 1</a></li>
+    <li><a href="./Uebung2/uebung2.html">Übung 2</a></li>
+</ul>
 </body>
 </html>
