uebungsaufgabe 3 hinzugefuegt und startseite angepasst

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <ul>
     <li><a href="./Uebung1/uebung1.html">Übung 1</a></li>
     <li><a href="./Uebung2/uebung2.html">Übung 2</a></li>
+    <li><a href="./Uebung3/uebung3.html">Übung 3</a></li>
 </ul>
 </body>
 </html>
